added outputs to the code in search_app.ipynb

--- a/src/tweets_to_mongoDB.ipynb
+++ b/src/tweets_to_mongoDB.ipynb
@@ -10,11 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pymongo in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (4.3.3)\n",
-      "Requirement already satisfied: dnspython<3.0.0,>=1.16.0 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from pymongo) (2.3.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.3.3-cp39-cp39-macosx_10_9_universal2.whl (413 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m413.2/413.2 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting dnspython<3.0.0,>=1.16.0\n",
+      "  Using cached dnspython-2.3.0-py3-none-any.whl (283 kB)\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.3.0 pymongo-4.3.3\n"
      ]
     }
    ],
@@ -36,20 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "27368ed1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster = MongoClient(\"mongodb+srv://varshiniyanamandra:twitter574@cluster0.nwilsw2.mongodb.net/?retryWrites=true&w=majority\")"
+    "cluster = MongoClient(\"mongodb+srv://vm574:twitter574@cluster0.nwilsw2.mongodb.net/?retryWrites=true&w=majority\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "50851442",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['twitter_data', 'admin', 'local']\n"
+     ]
+    }
+   ],
    "source": [
     "print(cluster.list_database_names())"
    ]
@@ -66,12 +76,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0923bd63",
+   "cell_type": "raw",
+   "id": "ae08e7c9",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "with open(\"corona-out-3\", \"r\") as f1:\n",
     "    \n",
     "    for line in f1:\n",
@@ -214,11 +223,11 @@
     "                    collection.insert_one(record) ## Inserting tweet information \n",
     "                    \n",
     "        except:\n",
-    "            continue"
+    "            continue\n",
+    "\"\"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c1009d73",
    "metadata": {},
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "26be2d6f",
    "metadata": {},
    "outputs": [
@@ -259,18 +268,9 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "15b0f3f2",
-   "metadata": {},
-   "source": [
-    "Sample Tweet For Reference"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b9d470fb",
+   "execution_count": 8,
+   "id": "1bc7d8ad",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        " 'timestamp_ms': '1587817302251'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,11 +462,293 @@
    "source": [
     "entity"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "580cfee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_line = 0\n",
+    "with open(\"corona-out-3\", \"r\") as f1:\n",
+    "    for line in f1:\n",
+    "        try:\n",
+    "            entity = json.loads(line)  \n",
+    "            if entity['text'].startswith('RT') : \n",
+    "                num_line += 1\n",
+    "                if num_line == 50 :  \n",
+    "                      break\n",
+    "                    \n",
+    "        except:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b0f3f2",
+   "metadata": {},
+   "source": [
+    "Sample Tweet For Reference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b9d470fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'created_at': 'Sat Apr 25 12:21:49 +0000 2020',\n",
+       " 'id': 1254022803969527808,\n",
+       " 'id_str': '1254022803969527808',\n",
+       " 'text': 'RT @Khiladi_ki_saru: Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya, a…',\n",
+       " 'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>',\n",
+       " 'truncated': False,\n",
+       " 'in_reply_to_status_id': None,\n",
+       " 'in_reply_to_status_id_str': None,\n",
+       " 'in_reply_to_user_id': None,\n",
+       " 'in_reply_to_user_id_str': None,\n",
+       " 'in_reply_to_screen_name': None,\n",
+       " 'user': {'id': 1144699678086139904,\n",
+       "  'id_str': '1144699678086139904',\n",
+       "  'name': 'akkians (kk) gujrat',\n",
+       "  'screen_name': 'Khushalkotak1',\n",
+       "  'location': None,\n",
+       "  'url': None,\n",
+       "  'description': '#king@staylishking',\n",
+       "  'translator_type': 'none',\n",
+       "  'protected': False,\n",
+       "  'verified': False,\n",
+       "  'followers_count': 57,\n",
+       "  'friends_count': 178,\n",
+       "  'listed_count': 0,\n",
+       "  'favourites_count': 9206,\n",
+       "  'statuses_count': 6640,\n",
+       "  'created_at': 'Fri Jun 28 20:10:45 +0000 2019',\n",
+       "  'utc_offset': None,\n",
+       "  'time_zone': None,\n",
+       "  'geo_enabled': False,\n",
+       "  'lang': None,\n",
+       "  'contributors_enabled': False,\n",
+       "  'is_translator': False,\n",
+       "  'profile_background_color': 'F5F8FA',\n",
+       "  'profile_background_image_url': '',\n",
+       "  'profile_background_image_url_https': '',\n",
+       "  'profile_background_tile': False,\n",
+       "  'profile_link_color': '1DA1F2',\n",
+       "  'profile_sidebar_border_color': 'C0DEED',\n",
+       "  'profile_sidebar_fill_color': 'DDEEF6',\n",
+       "  'profile_text_color': '333333',\n",
+       "  'profile_use_background_image': True,\n",
+       "  'profile_image_url': 'http://pbs.twimg.com/profile_images/1193559457491542018/_K5Gh9UI_normal.jpg',\n",
+       "  'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1193559457491542018/_K5Gh9UI_normal.jpg',\n",
+       "  'default_profile': True,\n",
+       "  'default_profile_image': False,\n",
+       "  'following': None,\n",
+       "  'follow_request_sent': None,\n",
+       "  'notifications': None},\n",
+       " 'geo': None,\n",
+       " 'coordinates': None,\n",
+       " 'place': None,\n",
+       " 'contributors': None,\n",
+       " 'retweeted_status': {'created_at': 'Sat Apr 25 04:51:42 +0000 2020',\n",
+       "  'id': 1253909528342601729,\n",
+       "  'id_str': '1253909528342601729',\n",
+       "  'text': 'Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya… https://t.co/Vf3DU4c58Y',\n",
+       "  'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>',\n",
+       "  'truncated': True,\n",
+       "  'in_reply_to_status_id': None,\n",
+       "  'in_reply_to_status_id_str': None,\n",
+       "  'in_reply_to_user_id': None,\n",
+       "  'in_reply_to_user_id_str': None,\n",
+       "  'in_reply_to_screen_name': None,\n",
+       "  'user': {'id': 3239730122,\n",
+       "   'id_str': '3239730122',\n",
+       "   'name': '🌹 𝐒𝐚𝐑𝐮𝐮 🌹 ˢᵒᵒʳʸᵃᵛᵃⁿˢʰⁱ🌬',\n",
+       "   'screen_name': 'Khiladi_ki_saru',\n",
+       "   'location': 'गुजरात, भारत',\n",
+       "   'url': None,\n",
+       "   'description': '🥀 𝑵𝒐 𝒔𝒐𝒚 𝒕𝒂𝒏 𝒃𝒖𝒆𝒏𝒂 , 𝓑𝓮𝓵𝓵𝓪 𝓬𝓲𝓪𝓸 🥀',\n",
+       "   'translator_type': 'none',\n",
+       "   'protected': False,\n",
+       "   'verified': False,\n",
+       "   'followers_count': 2672,\n",
+       "   'friends_count': 395,\n",
+       "   'listed_count': 4,\n",
+       "   'favourites_count': 81099,\n",
+       "   'statuses_count': 46475,\n",
+       "   'created_at': 'Mon Jun 08 10:13:21 +0000 2015',\n",
+       "   'utc_offset': None,\n",
+       "   'time_zone': None,\n",
+       "   'geo_enabled': True,\n",
+       "   'lang': None,\n",
+       "   'contributors_enabled': False,\n",
+       "   'is_translator': False,\n",
+       "   'profile_background_color': '000000',\n",
+       "   'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "   'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "   'profile_background_tile': False,\n",
+       "   'profile_link_color': 'F5ABB5',\n",
+       "   'profile_sidebar_border_color': '000000',\n",
+       "   'profile_sidebar_fill_color': '000000',\n",
+       "   'profile_text_color': '000000',\n",
+       "   'profile_use_background_image': False,\n",
+       "   'profile_image_url': 'http://pbs.twimg.com/profile_images/1250676087643766787/SaUhPzFO_normal.jpg',\n",
+       "   'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1250676087643766787/SaUhPzFO_normal.jpg',\n",
+       "   'profile_banner_url': 'https://pbs.twimg.com/profile_banners/3239730122/1585837999',\n",
+       "   'default_profile': False,\n",
+       "   'default_profile_image': False,\n",
+       "   'following': None,\n",
+       "   'follow_request_sent': None,\n",
+       "   'notifications': None},\n",
+       "  'geo': None,\n",
+       "  'coordinates': None,\n",
+       "  'place': None,\n",
+       "  'contributors': None,\n",
+       "  'is_quote_status': False,\n",
+       "  'extended_tweet': {'full_text': 'Apni kismat kharab h , ab jab saalon baad action flick aayi #Sooryavanshi vo bhi akki kat ki jodi to yeh corona aya, ab jab #AkshayKumar sir ne kuch naya tra kiya transgender banke to online release ho rha 🙂 phooti kismat \\n\\n250cr ki potential vali films ka yeh haal ho rha🙃',\n",
+       "   'display_text_range': [0, 273],\n",
+       "   'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [60, 73]},\n",
+       "     {'text': 'AkshayKumar', 'indices': [124, 136]}],\n",
+       "    'urls': [],\n",
+       "    'user_mentions': [],\n",
+       "    'symbols': []}},\n",
+       "  'quote_count': 0,\n",
+       "  'reply_count': 10,\n",
+       "  'retweet_count': 21,\n",
+       "  'favorite_count': 126,\n",
+       "  'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [60, 73]}],\n",
+       "   'urls': [{'url': 'https://t.co/Vf3DU4c58Y',\n",
+       "     'expanded_url': 'https://twitter.com/i/web/status/1253909528342601729',\n",
+       "     'display_url': 'twitter.com/i/web/status/1…',\n",
+       "     'indices': [117, 140]}],\n",
+       "   'user_mentions': [],\n",
+       "   'symbols': []},\n",
+       "  'favorited': False,\n",
+       "  'retweeted': False,\n",
+       "  'filter_level': 'low',\n",
+       "  'lang': 'hi'},\n",
+       " 'is_quote_status': False,\n",
+       " 'quote_count': 0,\n",
+       " 'reply_count': 0,\n",
+       " 'retweet_count': 0,\n",
+       " 'favorite_count': 0,\n",
+       " 'entities': {'hashtags': [{'text': 'Sooryavanshi', 'indices': [81, 94]}],\n",
+       "  'urls': [],\n",
+       "  'user_mentions': [{'screen_name': 'Khiladi_ki_saru',\n",
+       "    'name': '🌹 𝐒𝐚𝐑𝐮𝐮 🌹 ˢᵒᵒʳʸᵃᵛᵃⁿˢʰⁱ🌬',\n",
+       "    'id': 3239730122,\n",
+       "    'id_str': '3239730122',\n",
+       "    'indices': [3, 19]}],\n",
+       "  'symbols': []},\n",
+       " 'favorited': False,\n",
+       " 'retweeted': False,\n",
+       " 'filter_level': 'low',\n",
+       " 'lang': 'hi',\n",
+       " 'timestamp_ms': '1587817309740'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "901a275c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = collection.find_one({\"user_id\" : 1091660129894838272})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2ecbb4e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 1254022773598572544, 'text': '@VinceMcMahon @TripleH We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/YkVlYtJiGL', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817302499'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7e4c4a08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = collection.find({\"user_id\" : 1091660129894838272})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "40129a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 1254022773598572544, 'text': '@VinceMcMahon @TripleH We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/YkVlYtJiGL', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817302499'}\n",
+      "\n",
+      "{'_id': 1254023153204035586, 'text': '@aleynaakbuluut We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/2kFF0dGgFq', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587817393004'}\n",
+      "\n",
+      "{'_id': 1254034070620823552, 'text': '@HHSGov @realDonaldTrump @Surgeon_General We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/Y4AbBlpZFi', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587819995919'}\n",
+      "\n",
+      "{'_id': 1254034130221834241, 'text': '@HHSGov @HRSAgov We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #endovascular https://t.co/2LPL7zXJsF', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820010129'}\n",
+      "\n",
+      "{'_id': 1254034353396555777, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820063338'}\n",
+      "\n",
+      "{'_id': 1254034628777783296, 'text': '@NIH @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/efuMT1SeUn', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820128994'}\n",
+      "\n",
+      "{'_id': 1254034874337579008, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/5vg63A9k66', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820187540'}\n",
+      "\n",
+      "{'_id': 1254034931753406464, 'text': '@DepSecHargan @realDonaldTrump @VP @US_FDA We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/eeQOPyAz7L', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587820201229'}\n",
+      "\n",
+      "{'_id': 1254050509360697350, 'text': '@realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/JnFJpgaStn', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587823915220'}\n",
+      "\n",
+      "{'_id': 1254050612544757760, 'text': '@CDCgov @realDonaldTrump We hereby honor to announce that we have developed a brand new treatment method using UV rays / Laser Ray that might be used effectively for preventing all mankind from infectious virus.\\n\\n#covid #covid19 #Covid_19 #corona #vascular #FoxNews #FoxBusiness https://t.co/th2tqHjAmp', 'user_id': 1091660129894838272, 'coordinates': None, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'timestamp': '1587823939821'}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in p:\n",
+    "    print(i)\n",
+    "    print('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9cc0466",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
@@ -510,11 +792,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
   }
  },
  "nbformat": 4,
