--- a/utils/search_app.ipynb
+++ b/utils/search_app.ipynb
@@ -47,7 +47,7 @@
     "import psycopg2\n",
     "from pymongo import MongoClient\n",
     "from fastapi import HTTPException\n",
-    "from exceptions import *\n",
+    "from exceptions.exceptions import *\n",
     "import requests"
    ]
   },
@@ -733,6 +733,55 @@
     "# example\n",
     "retrieve_tweets_location(\"New York City\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main Search Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search functions currently supported:\n",
+    "- get_user_info(username)\n",
+    "- retrieve_tweets_keyword(keyword: str, sort_criterion = None)\n",
+    "- retrieve_tweet(tweet_id)\n",
+    "- retrieve_tweets_user(username: str, sort_criterion = 'popularity')\n",
+    "- retreive_screen_name(user_id)\n",
+    "- retrieve_tweets_location(location: str, distance = 100000, sort_criterion = 'popularity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(username = None, username_tweets = None, user_id = None, tweet_id = None, keyword = None, location = None, sort_criterion = 'popularity', distance = 100000):\n",
+    "    params = [username, username_tweets, user_id, tweet_id, keyword, location]\n",
+    "    # raise exception if no search parameters are specified\n",
+    "    if all(x is None for x in params):\n",
+    "        raise HTTPException(status_code = NoParametersGivenError.code, detail = NoParametersGivenError.description)\n",
+    "    # raise exception if too many search parameters are specified\n",
+    "    if params.count(None) < len(params) - 1:\n",
+    "        raise HTTPException(status_code = TooManyParametersGivenError.code, detail = TooManyParametersGivenError.description)\n",
+    "    \n",
+    "    if username is not None:\n",
+    "        return get_user_info(username)\n",
+    "    elif username_tweets is not None:\n",
+    "        return retrieve_tweets_user(username_tweets, sort_criterion)\n",
+    "    elif user_id is not None:\n",
+    "        return retreive_screen_name(user_id)\n",
+    "    elif tweet_id is not None:\n",
+    "        return retrieve_tweet(tweet_id)\n",
+    "    elif keyword is not None:\n",
+    "        return retrieve_tweets_keyword(keyword, sort_criterion)\n",
+    "    else:\n",
+    "        return retrieve_tweets_location(location, distance, sort_criterion)"
+   ]
   }
  ],
  "metadata": {
@@ -751,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
   },
   "vscode": {
    "interpreter": {
