--- a/JL/twitter-users.ipynb
+++ b/JL/twitter-users.ipynb
@@ -208,32 +208,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "insert_records(\"corona-out-2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of user IDs: 18461\n"
-     ]
-    }
-   ],
-   "source": [
-    "view_users(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# cur.execute(\"SELECT * FROM TwitterUser;\")\n",
     "# users=cur.fetchall()\n",
     "# for people in users:\n",
@@ -264,6 +238,20 @@
    ],
    "source": [
     "view_users(conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create separate indices for id and screen_name\n",
+    "cur.execute(\"CREATE INDEX idx_user_id ON TwitterUser (id);\")\n",
+    "cur.execute(\"CREATE INDEX idx_user_screen_name ON TwitterUser (screen_name);\")\n",
+    "\n",
+    "# Commit changes and close connection\n",
+    "conn.commit()"
    ]
   },
   {
