--- a/utils/tweets_to_mongoDB.ipynb
+++ b/utils/tweets_to_mongoDB.ipynb
@@ -2,37 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "caf9d014",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pymongo\n",
-      "  Downloading pymongo-4.3.3-cp39-cp39-macosx_10_9_universal2.whl (413 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m413.2/413.2 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting dnspython<3.0.0,>=1.16.0\n",
-      "  Using cached dnspython-2.3.0-py3-none-any.whl (283 kB)\n",
-      "Installing collected packages: dnspython, pymongo\n",
-      "Successfully installed dnspython-2.3.0 pymongo-4.3.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install pymongo\n",
-    "import pymongo\n",
-    "from pymongo import MongoClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "67ab0c20",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
     "import json"
    ]
   },
@@ -73,158 +49,6 @@
    "source": [
     "db = cluster[\"twitter_data\"]\n",
     "collection = db[\"tweets\"]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ae08e7c9",
-   "metadata": {},
-   "source": [
-    "\"\"\"\n",
-    "with open(\"corona-out-3\", \"r\") as f1:\n",
-    "    \n",
-    "    for line in f1:\n",
-    "        try:\n",
-    "            \n",
-    "            entity = json.loads(line)\n",
-    "\n",
-    "            # If it starts with 'RT', we want to check if the original tweet is in the DB\n",
-    "            if entity['text'].startswith('RT') : \n",
-    "                \n",
-    "                # If original tweet is not in DB, insert it\n",
-    "                if collection.find_one({'_id' : entity['retweeted_status']['id']}) is None : \n",
-    "                    \n",
-    "                    if entity['retweeted_status']['extended_tweet']['full_text'] is None:\n",
-    "                        record = { \n",
-    "                               '_id' : entity['retweeted_status']['id'],\n",
-    "                               'text': entity['retweeted_status']['text'],\n",
-    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
-    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
-    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
-    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
-    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
-    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
-    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
-    "                                 }\n",
-    "                        collection.insert_one({ \n",
-    "                               '_id' : entity['retweeted_status']['id'],\n",
-    "                               'text': entity['retweeted_status']['text'],\n",
-    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
-    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
-    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
-    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
-    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
-    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
-    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
-    "                                 }) # Insert the original tweet information\n",
-    "                        record = {  \n",
-    "                            '_id' : entity['id'],\n",
-    "                            'retweet' : 'yes',\n",
-    "                            'original_id' : entity['retweeted_status']['id'],\n",
-    "                            'text': entity['retweet_status']['text'], \n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'], \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                        collection.insert_one(record) # Insert the retweeted information too\n",
-    "                    \n",
-    "                    else :\n",
-    "                        record = { \n",
-    "                               '_id' : entity['retweeted_status']['id'],\n",
-    "                               'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
-    "                               'user_id' : entity['retweeted_status']['user']['id'],\n",
-    "                               'coordinates' : entity['retweeted_status']['coordinates'],\n",
-    "                               'quote_count' : entity['retweeted_status']['quote_count'], \n",
-    "                               'reply_count' : entity['retweeted_status']['reply_count'],\n",
-    "                               'retweet_count' : entity['retweeted_status']['retweet_count'],\n",
-    "                               'favorite_count' : entity['retweeted_status']['favorite_count'],\n",
-    "                               'timestamp' : entity['retweeted_status']['timestamp_ms']\n",
-    "                                 }\n",
-    "                        collection.insert_one(record) # Insert the original tweet information\n",
-    "                        record = {  \n",
-    "                            '_id' : entity['id'],\n",
-    "                            'retweet' : 'yes',\n",
-    "                            'original_id' : entity['retweeted_status']['id'],\n",
-    "                            'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'],  \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                        collection.insert_one(record) # Insert the retweeted information too\n",
-    "                    \n",
-    "                # If original tweet is already in the DB:\n",
-    "                else :               \n",
-    "                    if entity['retweeted_status']['extended_tweet']['full_text'] is None:\n",
-    "                        record = {  \n",
-    "                            '_id' : entity['id'],\n",
-    "                            'retweet' : 'yes',\n",
-    "                            'original_id' : entity['retweeted_status']['id'],\n",
-    "                            'text': entity['retweeted_status']['text'],\n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'],  \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                        collection.insert_one(record) # Insert the retweeted information \n",
-    "                    else :\n",
-    "                        record = {  \n",
-    "                            '_id' : entity['id'],\n",
-    "                            'retweet' : 'yes',\n",
-    "                            'original_id' : entity['retweeted_status']['id'],\n",
-    "                            'text': entity['retweeted_status']['extended_tweet']['full_text'], \n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'],  \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                        collection.insert_one(record) # Insert the retweeted information \n",
-    "                        \n",
-    "            ## If 'text' does not start with 'RT'\n",
-    "            else:\n",
-    "                if entity['extended_tweet']['full_text'] is None :\n",
-    "                    record =  {\n",
-    "                            '_id' : entity['id'],\n",
-    "                            'text': entity['text'],\n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'],  \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                    collection.insert_one(record) ## Inserting tweet information\n",
-    "                else :\n",
-    "                    record = {\n",
-    "                            '_id' : entity['id'],\n",
-    "                            'text': entity['extended_tweet']['full_text'],\n",
-    "                            'user_id' : entity['user']['id'],\n",
-    "                            'coordinates' : entity['coordinates'],\n",
-    "                            'quote_count' : entity['quote_count'], \n",
-    "                            'reply_count' : entity['reply_count'],\n",
-    "                            'retweet_count' : entity['retweet_count'],\n",
-    "                            'favorite_count' : entity['favorite_count'],\n",
-    "                            'timestamp' : entity['timestamp_ms']\n",
-    "                            }\n",
-    "                    collection.insert_one(record) ## Inserting tweet information \n",
-    "                    \n",
-    "        except:\n",
-    "            continue\n",
-    "\"\"\""
    ]
   },
   {
@@ -736,19 +560,11 @@
     "    print(i)\n",
     "    print('')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9cc0466",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -792,6 +608,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a58abfc0a7e00544aa0865de436a46ff5d623065a7bb5042b88f22cc5a6fce75"
+   }
   }
  },
  "nbformat": 4,
