--- a/utils/twitter-users.ipynb
+++ b/utils/twitter-users.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,18 +38,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompting username input from the user\n",
+    "username = input(\"Please enter your computer's username: \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ObjectInUse",
-     "evalue": "database \"twitter\" is being accessed by other users\nDETAIL:  There is 1 other session using the database.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mObjectInUse\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 34\u001b[0m\n\u001b[1;32m     31\u001b[0m cur \u001b[38;5;241m=\u001b[39m conn\u001b[38;5;241m.\u001b[39mcursor()\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Drop and recreate the \"twitter\" database\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m \u001b[43mcur\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDROP DATABASE twitter;\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m cur\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCREATE DATABASE twitter;\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Close the cursor and connection\u001b[39;00m\n",
-      "\u001b[0;31mObjectInUse\u001b[0m: database \"twitter\" is being accessed by other users\nDETAIL:  There is 1 other session using the database.\n"
+     "data": {
+      "text/plain": [
+       "'varshiniyanamandra'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# printing the username used\n",
+    "username"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PostgreSQL server information\n",
+      "{'user': 'varshiniyanamandra', 'passfile': '/Users/varshiniyanamandra/.pgpass', 'channel_binding': 'prefer', 'dbname': 'twitter', 'host': 'localhost', 'port': '5432', 'options': '', 'sslmode': 'prefer', 'sslcompression': '0', 'sslsni': '1', 'ssl_min_protocol_version': 'TLSv1.2', 'gssencmode': 'prefer', 'krbsrvname': 'postgres', 'target_session_attrs': 'any'} \n",
+      "\n"
      ]
     }
    ],
@@ -57,7 +86,7 @@
     "# Connect to the default \"postgres\" database to perform operations on databases\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"postgres\",\n",
-    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "    user=username,  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -77,7 +106,7 @@
     "    # Create a new connection with autocommit enabled\n",
     "    conn = psycopg2.connect(\n",
     "        dbname=\"postgres\",\n",
-    "        user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "        user=username,  # Only replace with your system user name\n",
     "        password=\"\",\n",
     "        host=\"localhost\",\n",
     "        port=\"5432\")\n",
@@ -97,7 +126,7 @@
     "    # Create a new connection with autocommit enabled\n",
     "    conn = psycopg2.connect(\n",
     "        dbname=\"postgres\",\n",
-    "        user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "        user=username,  # Only replace with your system user name\n",
     "        password=\"\",\n",
     "        host=\"localhost\",\n",
     "        port=\"5432\")\n",
@@ -116,7 +145,7 @@
     "# Connect to the newly created \"twitter\" database\n",
     "conn = psycopg2.connect(\n",
     "    dbname=\"twitter\",\n",
-    "    user=\"varshiniyanamandra\",  # Only replace with your system user name\n",
+    "    user=username,  # Only replace with your system user name\n",
     "    password=\"\",\n",
     "    host=\"localhost\",\n",
     "    port=\"5432\")\n",
@@ -130,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -185,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +327,9 @@
     "from sqlalchemy import create_engine\n",
     "\n",
     "# Create an SQLAlchemy engine using the psycopg2 connection string\n",
-    "engine = create_engine(\"postgresql+psycopg2://varshiniyanamandra:@localhost:5432/twitter\")\n",
+    "url = \"postgresql+psycopg2://\" + username + \":@localhost:5432/twitter\"\n",
+    "# engine = create_engine(\"postgresql+psycopg2://varshiniyanamandra:@localhost:5432/twitter\")\n",
+    "engine = create_engine(url)\n",
     "\n",
     "def get_twitter_users_dataframe(engine):\n",
     "    query = \"SELECT * FROM TwitterUser;\"\n",
@@ -679,13 +710,6 @@
     "cur.close()\n",
     "conn.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
