debugging the code

--- a/utils/tweets_to_mongoDB.ipynb
+++ b/utils/tweets_to_mongoDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "caf9d014",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "27368ed1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "50851442",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['twitter_data', 'admin', 'local']\n"
+      "['test2', 'test_db', 'twitter_data', 'admin', 'local']\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a23c3952",
    "metadata": {},
    "outputs": [],
@@ -61,16 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "26be2d6f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'created_at': 'Sat Apr 25 12:21:42 +0000 2020', 'id': 1254022772558368768, 'id_str': '1254022772558368768', 'text': 'RT @BJP4India: India’s war with Corona is ongoing.\\n\\nPlay your part and make sure no one around you starves.\\n\\nYour contribution to defeat hu…', 'source': '<a href=\"http://twitter.com/download/android\" rel=\"nofollow\">Twitter for Android</a>', 'truncated': False, 'in_reply_to_status_id': None, 'in_reply_to_status_id_str': None, 'in_reply_to_user_id': None, 'in_reply_to_user_id_str': None, 'in_reply_to_screen_name': None, 'user': {'id': 908326492718764034, 'id_str': '908326492718764034', 'name': 'शचीन्द्र पाण्डेय', 'screen_name': 'im_S_pandey', 'location': 'Amethi Uttar Pradesh', 'url': None, 'description': 'Official Twitter Handel Shachindra Pandey (@im_s_pandey) BJP IT Department Amethi District\\n Fallow by Narendra Modi \\n (@narendramodi) ji', 'translator_type': 'none', 'protected': False, 'verified': False, 'followers_count': 2362, 'friends_count': 202, 'listed_count': 3, 'favourites_count': 30668, 'statuses_count': 48906, 'created_at': 'Thu Sep 14 13:48:06 +0000 2017', 'utc_offset': None, 'time_zone': None, 'geo_enabled': True, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': '', 'profile_background_image_url_https': '', 'profile_background_tile': False, 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'profile_image_url': 'http://pbs.twimg.com/profile_images/1252819913820925952/PdvkxSTA_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/1252819913820925952/PdvkxSTA_normal.jpg', 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/908326492718764034/1579091829', 'default_profile': True, 'default_profile_image': False, 'following': None, 'follow_request_sent': None, 'notifications': None}, 'geo': None, 'coordinates': None, 'place': None, 'contributors': None, 'retweeted_status': {'created_at': 'Sat Apr 25 07:30:12 +0000 2020', 'id': 1253949413191344128, 'id_str': '1253949413191344128', 'text': 'India’s war with Corona is ongoing.\\n\\nPlay your part and make sure no one around you starves.\\n\\nYour contribution to… https://t.co/lKhbsMFpIA', 'display_text_range': [0, 140], 'source': '<a href=\"https://mobile.twitter.com\" rel=\"nofollow\">Twitter Web App</a>', 'truncated': True, 'in_reply_to_status_id': None, 'in_reply_to_status_id_str': None, 'in_reply_to_user_id': None, 'in_reply_to_user_id_str': None, 'in_reply_to_screen_name': None, 'user': {'id': 207809313, 'id_str': '207809313', 'name': 'BJP', 'screen_name': 'BJP4India', 'location': '6-A, Deen Dayal Upadhyay Marg,', 'url': 'http://www.bjp.org', 'description': \"Official Twitter account of the Bharatiya Janata Party (BJP), world's largest political party. भारतीय जनता पार्टी (भाजपा)\\n\\nhttp://instagram.com/bjp4india\", 'translator_type': 'none', 'protected': False, 'verified': True, 'followers_count': 13481667, 'friends_count': 3, 'listed_count': 3018, 'favourites_count': 0, 'statuses_count': 200315, 'created_at': 'Tue Oct 26 02:19:07 +0000 2010', 'utc_offset': None, 'time_zone': None, 'geo_enabled': True, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'profile_background_color': 'C0DEED', 'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png', 'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png', 'profile_background_tile': False, 'profile_link_color': '0084B4', 'profile_sidebar_border_color': 'FFFFFF', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': False, 'profile_image_url': 'http://pbs.twimg.com/profile_images/812531108092874753/frVON4bm_normal.jpg', 'profile_image_url_https': 'https://pbs.twimg.com/profile_images/812531108092874753/frVON4bm_normal.jpg', 'profile_banner_url': 'https://pbs.twimg.com/profile_banners/207809313/1583155635', 'default_profile': False, 'default_profile_image': False, 'following': None, 'follow_request_sent': None, 'notifications': None}, 'geo': None, 'coordinates': None, 'place': None, 'contributors': None, 'is_quote_status': False, 'extended_tweet': {'full_text': 'India’s war with Corona is ongoing.\\n\\nPlay your part and make sure no one around you starves.\\n\\nYour contribution to defeat hunger is as valuable as defeating Corona.\\n\\n#FeedTheNeedy https://t.co/TUWf2nqPgZ', 'display_text_range': [0, 179], 'entities': {'hashtags': [{'text': 'FeedTheNeedy', 'indices': [166, 179]}], 'urls': [], 'user_mentions': [], 'symbols': [], 'media': [{'id': 1253949383403425793, 'id_str': '1253949383403425793', 'indices': [180, 203], 'media_url': 'http://pbs.twimg.com/media/EWbsUgwU0AEQ3G0.jpg', 'media_url_https': 'https://pbs.twimg.com/media/EWbsUgwU0AEQ3G0.jpg', 'url': 'https://t.co/TUWf2nqPgZ', 'display_url': 'pic.twitter.com/TUWf2nqPgZ', 'expanded_url': 'https://twitter.com/BJP4India/status/1253949413191344128/photo/1', 'type': 'photo', 'sizes': {'thumb': {'w': 150, 'h': 150, 'resize': 'crop'}, 'small': {'w': 680, 'h': 680, 'resize': 'fit'}, 'large': {'w': 1200, 'h': 1200, 'resize': 'fit'}, 'medium': {'w': 1200, 'h': 1200, 'resize': 'fit'}}}]}, 'extended_entities': {'media': [{'id': 1253949383403425793, 'id_str': '1253949383403425793', 'indices': [180, 203], 'media_url': 'http://pbs.twimg.com/media/EWbsUgwU0AEQ3G0.jpg', 'media_url_https': 'https://pbs.twimg.com/media/EWbsUgwU0AEQ3G0.jpg', 'url': 'https://t.co/TUWf2nqPgZ', 'display_url': 'pic.twitter.com/TUWf2nqPgZ', 'expanded_url': 'https://twitter.com/BJP4India/status/1253949413191344128/photo/1', 'type': 'photo', 'sizes': {'thumb': {'w': 150, 'h': 150, 'resize': 'crop'}, 'small': {'w': 680, 'h': 680, 'resize': 'fit'}, 'large': {'w': 1200, 'h': 1200, 'resize': 'fit'}, 'medium': {'w': 1200, 'h': 1200, 'resize': 'fit'}}}]}}, 'quote_count': 16, 'reply_count': 101, 'retweet_count': 340, 'favorite_count': 1870, 'entities': {'hashtags': [], 'urls': [{'url': 'https://t.co/lKhbsMFpIA', 'expanded_url': 'https://twitter.com/i/web/status/1253949413191344128', 'display_url': 'twitter.com/i/web/status/1…', 'indices': [116, 139]}], 'user_mentions': [], 'symbols': []}, 'favorited': False, 'retweeted': False, 'possibly_sensitive': False, 'filter_level': 'low', 'lang': 'en'}, 'is_quote_status': False, 'quote_count': 0, 'reply_count': 0, 'retweet_count': 0, 'favorite_count': 0, 'entities': {'hashtags': [], 'urls': [], 'user_mentions': [{'screen_name': 'BJP4India', 'name': 'BJP', 'id': 207809313, 'id_str': '207809313', 'indices': [3, 13]}], 'symbols': []}, 'favorited': False, 'retweeted': False, 'filter_level': 'low', 'lang': 'en', 'timestamp_ms': '1587817302251'}\n",
-      "\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'corona-out-3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m num_line \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcorona-out-3\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f1:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f1:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "File \u001b[0;32m~/Documents/GitHub/stat-694-spring-2023-team2-final-project/.venv/lib/python3.9/site-packages/IPython/core/interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    282\u001b[0m     )\n\u001b[0;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'corona-out-3'"
      ]
     }
    ],
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1bc7d8ad",
    "metadata": {},
    "outputs": [
@@ -289,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "580cfee1",
    "metadata": {},
    "outputs": [],
@@ -318,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b9d470fb",
    "metadata": {},
    "outputs": [
@@ -486,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "901a275c",
    "metadata": {},
    "outputs": [],
@@ -496,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2ecbb4e7",
    "metadata": {},
    "outputs": [
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7e4c4a08",
    "metadata": {},
    "outputs": [],
@@ -524,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "40129a65",
    "metadata": {},
    "outputs": [
