--- a/utils/twitter-users.ipynb
+++ b/utils/twitter-users.ipynb
@@ -321,23 +321,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transform the data into a DataFrame for improved visualization and readability. \n",
+    "# # Transform the data into a DataFrame for improved visualization and readability. \n",
     "\n",
-    "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
+    "# import pandas as pd\n",
+    "# from sqlalchemy import create_engine\n",
     "\n",
-    "# Create an SQLAlchemy engine using the psycopg2 connection string\n",
-    "url = \"postgresql+psycopg2://\" + username + \":@localhost:5432/twitter\"\n",
-    "# engine = create_engine(\"postgresql+psycopg2://varshiniyanamandra:@localhost:5432/twitter\")\n",
-    "engine = create_engine(url)\n",
+    "# # Create an SQLAlchemy engine using the psycopg2 connection string\n",
+    "# url = \"postgresql+psycopg2://\" + username + \":@localhost:5432/twitter\"\n",
+    "# # engine = create_engine(\"postgresql+psycopg2://varshiniyanamandra:@localhost:5432/twitter\")\n",
+    "# engine = create_engine(url)\n",
     "\n",
-    "def get_twitter_users_dataframe(engine):\n",
-    "    query = \"SELECT * FROM TwitterUser;\"\n",
-    "    df = pd.read_sql_query(query, engine)\n",
-    "    return df\n",
+    "# def get_twitter_users_dataframe(engine):\n",
+    "#     query = \"SELECT * FROM TwitterUser;\"\n",
+    "#     df = pd.read_sql_query(query, engine)\n",
+    "#     return df\n",
     "\n",
-    "# Fetch the data and convert it into a DataFrame\n",
-    "user_df = get_twitter_users_dataframe(engine)\n"
+    "# # Fetch the data and convert it into a DataFrame\n",
+    "# user_df = get_twitter_users_dataframe(engine)\n"
    ]
   },
   {
@@ -698,7 +698,7 @@
     }
    ],
    "source": [
-    "user_df.head(20)"
+    "# user_df.head(20)"
    ]
   },
   {
